ToList is unmutable